import groovy.json.JsonSlurper

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
	id 'com.epages.restdocs-api-spec' version '0.18.4'
}

group = 'com.umust'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	asciidoctorExt
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
	set('openapiOutDir', file("build/api-spec"))                 // ✅ openapi 산출 고정
	set('openapiStaticDir', file("build/resources/main/static/docs"))
}

dependencies {
	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Spring Devtools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.hibernate.orm:hibernate-spatial'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Spring OAuth 2.0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// QueryDSL
	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'  // AWS S3 SDK 추가
	testImplementation 'io.findify:s3mock_2.13:0.2.6'

	// Spring Rest Docs
	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.4'
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
	// openapi 결과를 한곳에 고정
	set('openapiOutDir', file("$buildDir/api-spec"))
	// swagger-ui가 읽을 파일을 static 아래에 두기
	set('openapiStaticDir', file("$buildDir/resources/main/static/docs"))
}

// 2. 테스트 및 asciidoctor 설정
tasks.named('test') {
	useJUnitPlatform()
	outputs.dir snippetsDir
}

tasks.named('asciidoctor') {
	dependsOn test
	configurations 'asciidoctorExt'
	inputs.dir snippetsDir
	// 출력 위치를 build 내부로 한정하는 것이 좋습니다.
	outputDir file('build/docs/asciidoc')
}

// 3. OpenAPI 보안 주입 로직 (파일 경로 명확화)
tasks.register("injectSecurityDefinition") {
	mustRunAfter tasks.matching { it.name == 'openapi3' }
	doLast {
		File f = file("${openapiOutDir}/openapi3.json")
		if (f.exists()) {
			// 외부 라이브러리 없이 직접 문자열 치환 시도 (가장 안전한 방법)
			String content = f.text
			// components가 있는지 확인하고 securitySchemes 주입
			if (!content.contains("securitySchemes")) {
				// 간단한 JSON 조작을 위해 다시 Slurper 사용
				def json = new groovy.json.JsonSlurper().parseText(content)
				json.components = json.components ?: [:]
				json.components.securitySchemes = [
						BearerAuth: [type: "http", scheme: "bearer", bearerFormat: "JWT"]
				]
				json.security = [[BearerAuth: []]]
				f.text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(json))
			}
			println "✅ Security Injected"
		}
	}
}

// 4. 복사 작업 (가장 중요)
tasks.register("copyOpenApiToStatic") {
	dependsOn "injectSecurityDefinition"
	doLast {
		copy {
			from openapiOutDir
			include "openapi3.json"
			into openapiStaticDir
		}
	}
}

// 5. 빌드 파이프라인 정리
// 빌드(jar 생성) 시에만 문서 복사가 포함되도록 설정
tasks.named('bootJar') {
	// 1. 테스트 실행 -> 2. 문서 생성 -> 3. 보안 주입 -> 4. 복사 -> 5. 빌드
	dependsOn tasks.named('copyOpenApiToStatic')
	dependsOn tasks.named('asciidoctor')

	duplicatesStrategy = DuplicatesStrategy.INCLUDE

	// 복사된 결과물을 jar 내부의 static/docs에 포함
	from("${openapiOutDir}") {
		include "openapi3.json"
		into 'BOOT-INF/classes/static/docs'
	}

	from("${asciidoctor.outputDir}") {
		into 'BOOT-INF/classes/static/docs'
	}
}